buttons work for rock paper scissors

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 
 </head>
 <body>
-    <label for="playerInput">Player Input:</label>
-    <input type="text" class="playerInput">
+
+
 
     <div class="results"></div>
 
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
+    <button class="clear">Clear</button>
 
 
 
