Added scoring without end game condition

--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
 
 
 
-    <div class="results"></div>
+    <div class="results">
+        <h1>Score</h1>
+        <h2>Player</h2>
+        <h2>Computer</h2>
+        <br>
+        <h3 id="playerScore">0</h3>
+        <h3>-</h3>
+        <h3 id="computerScore">0</h3>
+        <br>
+        <div id="round">Round Result</div>
+    </div>
 
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
-    <button class="clear">Clear</button>
+    <button class="selection">Rock</button>
+    <button class="selection">Paper</button>
+    <button class="selection">Scissors</button>
+
 
 
 
