--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
 <body>
 
 
+    <h1>ROCK! PAPER! SCISSORS!</h1>
 
     <div class="results">
         <h1>Score</h1>
-        <h2>Player</h2>
-        <h2>Computer</h2>
+        <div class="category">
+            <h2 style="color:green">Player</h2>
+            <h2 style="color: red">Computer</h2>
+        </div>
+        <div class="score">
+            <h3 style="color: green" id="playerScore">0</h3>
+            <h3>-</h3>
+            <h3 style="color: red" id="computerScore">0</h3>
+        </div>
+
+     
         <br>
-        <h3 id="playerScore">0</h3>
-        <h3>-</h3>
-        <h3 id="computerScore">0</h3>
+       
         <br>
         <div id="round">Round Result</div>
     </div>
