--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
 </head>
 <body>
 
+    <div class="intro">
+        <h1><span class="orange">Basketball!</span> <span class="lightblue">Window!</span> Needle!</h1>
+        <p><i>An adaptation of Rock! Paper! Scissors! </i></p>
+        <h2>Rules: </h2>
+        <p>Basketball breaks window, window breaks needle, needle deflates basketball.</p>
+    </div>
 
-    <h1>Basketball! Window! Needle!</h1>
+    <h1><span class="orange">Choose</span> <span class="lightblue">your</span> item!</h1>
+    
+    <div class="choices">
+        <img src="images/basketball.png" alt="">
+        <img src="images/window.png" alt="">
+        <img src="images/syringe.svg" alt="">
+    </div>
 
     <div class="results">
         <div class="player">
-            <h2>Player Score</h2>
+            <h2>Your Score</h2>
             <div class="scoreboard">
                 <div class="rectangle">0</div>
                 <div class="rectangle">0</div>
@@ -36,12 +48,7 @@
     </div>
     <div class="roundResult"><h2>Round Result</h2></div>
 
-    <div class="choices">
-        <img src="images/basketball.png" alt="">
-        <img src="images/window.png" alt="">
-        <img src="images/needle.jpg" alt="">
-        
-    </div>
+   
 
 
 
