connect javascript to new ui

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="intro">
         <h1><span class="orange">Basketball!</span> <span class="lightblue">Window!</span> Needle!</h1>
         <p><i>An adaptation of Rock! Paper! Scissors! </i></p>
-        <h2>Rules: </h2>
+        <br>
         <p>Basketball breaks window, window breaks needle, needle deflates basketball.</p>
     </div>
 
     <h1><span class="orange">Choose</span> <span class="lightblue">your</span> item!</h1>
     
     <div class="choices">
-        <img src="images/basketball.png" alt="">
-        <img src="images/window.png" alt="">
-        <img src="images/syringe.svg" alt="">
+        <img class="basketball"src="images/basketball.png" alt="">
+        <img class="window"src="images/window.png" alt="">
+        <img class="needle"src="images/needle.png" alt="">
     </div>
 
     <div class="results">
@@ -29,7 +29,7 @@
             <h2>Your Score</h2>
             <div class="scoreboard">
                 <div class="rectangle">0</div>
-                <div class="rectangle">0</div>
+                <div id="playerScore" class="rectangle">0</div>
             </div>
             <div class="choice">
                 <h2>-</h2>
@@ -39,7 +39,7 @@
             <h2>Computer Score</h2>
             <div class="scoreboard">
                 <div class="rectangle">0</div>
-                <div class="rectangle">0</div>
+                <div id="computerScore" class="rectangle">0</div>
             </div>
             <div class="choice">
                 <h2>-</h2>
