--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1><span class="orange">Basketball!</span> <span class="lightblue">Window!</span> Needle!</h1>
         <p><i>An adaptation of Rock! Paper! Scissors! </i></p>
         <br>
-        <p><span class="orange">Basketball</span> breaks <span class="lightblue">window</span>, <span class="lightblue">window</span> breaks <b>needle</b>, <b>needle</b> deflates <span class="orange">basketballui</span>.</p>
+        <p><span class="orange">Basketball</span> breaks <span class="lightblue">window</span>, <span class="lightblue">window</span> breaks <b>needle</b>, <b>needle</b> deflates <span class="orange">basketball</span>.</p>
     </div>
 
     <h1><span class="orange">Choose</span> <span class="lightblue">your</span> item!</h1>
